# NexTango

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
Programas_hechos/: Readme.txt
coordination/: BRIEF_MAÑANA_2026-07-22.md  MIGRACION_CARPETAS_FALTANTES.md  PROTOCOLO_DISPATCH.md  README.md  SERVIDOR_ERPNEXT.md
deploy/: DATOS.md  INSTALL.md  PROGRAMA.md  RECUPERACION_AGENTES.md  backup.sh  backup_agentes_mint.sh  backup_datos.sh  cron_backup_a_mint.sh  instalar_cron_backup.sh  install.sh  install_programa.sh  restore.sh  restore_datos.sh
docs/: 00_BRUJULA_DOCUMENT_FUNDACIONAL.md  00_BRUJU_MESSAGE_TO_TEAM.md  00_PROJECT_NORTH_STAR.md  01_ARCHITECTURE.md  02_SOURCE_OF_TRUTH.md  03_TANGO_BOUNDARY.md  04_PRICING_EXCEL_TANGO.md  05_OCR_SUPPLIERS_FLOW.md  06_PRESET_TO_QUOTATION_V0_1.md  07_CUT_BATCH_COMPILER_V0_1.md  08_CHANGE_MANAGEMENT.md  09_ENGINEERING_ORG.md  10_AUTONOMOUS_APPROVAL_POLICY.md  11_WEEKEND_ADVANCE_PLAN.md  12_FRAPPE_DOCTYPES_BLUEPRINT.md  13_MVP_ACCEPTANCE_CRITERIA.md  14_LOCAL_REPO_WORKFLOW.md  15_MONDAY_EXECUTION_PLAN.md  16_DEVELOPMENT_BACKLOG.md  17_STRUCTURAL_DESTINATION.md  18_LINEAR_CUTTING_MODULE.md  19_CLIENT_PIECE_LIBRARY.md  20_PIECE_STATUS_TRACKING.md  21_SECURITY_BEFORE_PUBLIC_PORTAL.md  22_FIRST_SLICE_TEAM.md  23_AGENT_PERMISSIONS_MATRIX.md  24_MONDAY_CODEX_SINGLE_ORDER.md  25_AGENT_HANDOFF_PROTOCOL.md  26_DEFINITION_OF_DONE.md  27_FIRST_SLICE_BACKLOG.md  28_EXECUTION_COMMANDS.md  29_AGENT_ZOO.md  ANALISIS_COMPLETO_SISTEMA.md  CODEX_MONDAY_BOOTSTRAP_PROMPT.md  (+3 more)
tools/: run_demo.sh  (+28 more)
(+988 files in other folders)
